# larcorealg

./: .gitignore  CMakeLists.txt  CMakePresets.json  GNUmakefile  README.md  temp.txt
Geometry/: AuxDetChannelMapAlg.cxx  AuxDetChannelMapAlg.h  AuxDetGeo.cxx  AuxDetGeo.h  AuxDetGeoObjectSorter.cxx  AuxDetGeoObjectSorter.h  AuxDetGeometry.h  AuxDetGeometryCore.cxx  AuxDetGeometryCore.h  AuxDetGeometry_service.cc  AuxDetSensitiveGeo.cxx  AuxDetSensitiveGeo.h  BoxBoundedGeo.cxx  BoxBoundedGeo.h  CMakeLists.txt  ChannelMapAlg.cxx  ChannelMapAlg.h  ChannelMapStandardAlg.cxx  ChannelMapStandardAlg.h  CryostatGeo.cxx  CryostatGeo.h  GeoObjectSorter.h  GeoObjectSorterStandard.cxx  GeoObjectSorterStandard.h  Geometry.h  GeometryCore.cxx  GeometryCore.h  Geometry_service.cc  OpDetGeo.cxx  OpDetGeo.h  PlaneGeo.cxx  PlaneGeo.h  TPCGeo.cxx  TPCGeo.h  WireGeo.cxx  WireGeo.h  geo.h
Geometry/gdml/: CMakeLists.txt  LArTPCdetector.gdml  LArTPCdetector_nowires.gdml
Geometry/test/: CMakeLists.txt
SimpleTypesAndConstants/test/: CMakeLists.txt
Utilities/test/: CMakeLists.txt
doc/: Makefile  ThirdPlaneSlope.tex
larcore/CoreUtils/: CMakeLists.txt  DebugUtils.cxx  DebugUtils.h  DereferenceIterator.h  DumpUtils.h  ProviderPack.h  RealComparisons.h
larcore/Geometry/: AuxDetChannelMapAlg.cxx  AuxDetChannelMapAlg.h  AuxDetGeo.cxx  AuxDetGeo.h  AuxDetGeoObjectSorter.cxx  AuxDetGeoObjectSorter.h  AuxDetGeometry.h  AuxDetGeometryCore.cxx  AuxDetGeometry_service.cc  AuxDetSensitiveGeo.cxx  AuxDetSensitiveGeo.h  BoxBoundedGeo.cxx  BoxBoundedGeo.h  CMakeLists.txt  ChannelMapAlg.cxx  ChannelMapAlg.h  ChannelMapStandardAlg.cxx  ChannelMapStandardAlg.h  CryostatGeo.cxx  CryostatGeo.h  Decomposer.h  GeoObjectSorter.cxx  GeoObjectSorter.h  GeoObjectSorterStandard.cxx  GeoObjectSorterStandard.h  Geometry.h  GeometryCore.cxx  GeometryCore.h  Geometry_service.cc  LocalTransformation.cxx  LocalTransformation.h  LocalTransformation.tcc  OpDetGeo.cxx  PlaneGeo.cxx  PlaneGeo.h  TPCGeo.cxx  TPCGeo.h  WireGeo.cxx  WireGeo.h  geometry_lartpcdetector.fcl
larcore/Geometry/gdml/: CMakeLists.txt  LArTPCdetector.gdml  LArTPCdetector_nowires.gdml
larcore/TestUtils/: CMakeLists.txt  NameSelector.cxx  ProviderList.h  ProviderTestHelpers.h  StopWatch.h  boost_unit_test_base.h  unit_test_base.h
larcorealg/: CMakeLists.txt  GNUmakefile
larcorealg/CoreUtils/: CMakeLists.txt  ContainerMeta.h  DebugUtils.cxx  DebugUtils.h  DereferenceIterator.h  DumpUtils.h  MetaUtils.h  NumericUtils.cxx  NumericUtils.h  ParticleFilters.h  ProviderPack.h  ProviderUtil.h  RealComparisons.h  SortByPointers.h  StdUtils.h  UncopiableAndUnmovableClass.h  counter.h  enumerate.h  fromFutureImport.h  get_elements.h  makeValueIndex.h  operations.h  quiet_Math_Functor.h  span.h  values.h  zip.h
larcorealg/GeoAlgo/: CMakeLists.txt  GNUmakefile  GeoAABox.cxx  GeoAABox.h  GeoAlgo-TypeDef.h  GeoAlgo.cxx  GeoAlgo.h  GeoAlgoConstants.h  GeoAlgoException.h  GeoCone.cxx  GeoCone.h  GeoCylinder.cxx  GeoCylinder.h  GeoDirectedLine.cxx  GeoDirectedLine.h  GeoHalfLine.cxx  GeoHalfLine.h  GeoLine.cxx  GeoLine.h  GeoLineSegment.cxx  GeoLineSegment.h  GeoObjCollection.cxx  GeoObjCollection.h  GeoSphere.cxx  GeoSphere.h  GeoTrajectory.cxx  GeoTrajectory.h  GeoVector.cxx  GeoVector.h  LinkDef.h  classes.h  classes_def.xml  larcorealg_GeoAlgoDict.cxx
larcorealg/Geometry/: AuxDetChannelMapAlg.cxx  AuxDetChannelMapAlg.h  AuxDetGeo.cxx  AuxDetGeo.h  AuxDetGeoObjectSorter.cxx  AuxDetGeoObjectSorter.h  AuxDetGeometryCore.cxx  AuxDetGeometryCore.h  AuxDetGeometry_service.cc  AuxDetSensitiveGeo.cxx  AuxDetSensitiveGeo.h  BoxBoundedGeo.cxx  BoxBoundedGeo.h  CMakeLists.txt  ChannelMapAlg.cxx  ChannelMapAlg.h  ChannelMapStandardAlg.cxx  ChannelMapStandardAlg.h  CryostatGeo.cxx  CryostatGeo.h  Decomposer.h  DriftPartitions.cxx  DriftPartitions.h  Exceptions.h  GeoNodePath.cxx  GeoNodePath.h  GeoObjectSorter.cxx  GeoObjectSorter.h  GeoObjectSorterStandard.cxx  GeoObjectSorterStandard.h  GeoVectorLocalTransformation.cxx  GeoVectorLocalTransformation.h  GeoVectorLocalTransformation.tcc  GeometryBuilder.h  GeometryBuilderStandard.cxx  GeometryBuilderStandard.h  GeometryBuilderWireless.cxx  GeometryBuilderWireless.h  GeometryCore.cxx  GeometryCore.h  (+35 more)
larcorealg/Geometry/details/: extractMaxGeometryElements.h  geometry_iterator_maker.h  geometry_iterators.h  helpers.cxx  helpers.h  nSiblings.cxx  nSiblings.h
larcorealg/Geometry/gdml/: CMakeLists.txt  MinimalLArTPCdetector.gdml  MinimalLArTPCdetector_nowires.gdml
larcorealg/TestUtils/: CMakeLists.txt  NameSelector.cxx  NameSelector.h  ProviderList.h  ProviderTestHelpers.h  StopWatch.h  boost_unit_test_base.h  geometry_unit_test_base.h  unit_test_base.h
test/: CMakeLists.txt  GNUmakefile
test/CoreUtils/: CMakeLists.txt  ContainerMeta_test.cc  DebugUtils_test.cc  DereferenceIterator_test.cc  DumpUtils_test.cc  MetaUtils_test.cc  NumericUtils_test.cc  ProviderPack_test.cc  RealComparisons_test.cc  SortByPointers_test.cc  UncopiableAndUnmovableClass_test.cc  counter_test.cc  enumerate_test.cc  get_elements_test.cc  operations_test.cc  printBacktrace_test.cc  quiet_Math_Functor_test.sh  span_test.cc  values_test.cc  zip_test.cc
test/GeoAlgo/: CMakeLists.txt  test_distance.py  test_import.py
test/Geometry/: CMakeLists.txt  ChannelMapStandardTestAlg.cxx  ChannelMapStandardTestAlg.h  Decomposer_test.cxx  GeometryGeoIDTestAlg.cxx  GeometryGeoIDTestAlg.h  GeometryIteratorLoopTestAlg.cxx  GeometryIteratorLoopTestAlg.h  GeometryIteratorTestAlg.cxx  GeometryIteratorTestAlg.h  GeometryTestAlg.cxx  GeometryTestAlg.h  IteratorTypes.h  LineClosestPoint_test.cc  SimpleGeo_test.cxx  driftvolumes_test.cxx  dump_lartpcdetector_channelmap.fcl  geo_vectors_utils_test.cc  geoidmapper_test.cxx  geometry_geoid_test.cxx  geometry_iterator_loop_test.cxx  geometry_iterator_test.cxx  geometry_loader_test.cxx  geometry_standardchannelmapping_test.cxx  geometry_test.cxx  geometry_thirdplaneslope_test.cxx  geometry_unit_test_base.h  geometrydatacontainers_test.cxx  readoutdatacontainers_test.cxx  test_geometry.fcl  (+2 more)
ups/: product_deps
(+4 files in other folders)
